--- a/bower.json
+++ b/bower.json
@@ -25,6 +25,7 @@
     "angular": ">= 1.2.5"
   },
   "devDependencies": {
-    "angular-mocks": ">= 1.2.5"
+    "angular-mocks": ">= 1.2.5",
+    "angular-sanitize": "~1.2.25"
   }
 }
